--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^7.1.1",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.1.1",
     "@nestjs/platform-express": "^7.1.1",
     "@nestjs/swagger": "^4.5.12",
