--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
     "@nestjs/core": "^7.1.1",
     "@nestjs/platform-express": "^7.1.1",
     "@nestjs/swagger": "^4.5.12",
+    "@nestjs/typeorm": "^7.1.0",
+    "@types/uuid": "^8.0.0",
+    "mysql": "^2.18.1",
+    "nestjs-pino": "^1.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.5",
     "swagger-ui-express": "^4.1.4",
-    "@types/uuid": "^8.0.0",
-    "@nestjs/typeorm": "^7.1.0",
-    "mysql": "^2.18.1",
     "typeorm": "^0.2.25",
-    "uuid": "^8.2.0",
-    "winston": "^3.3.3"
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.2.0",
