:construction: Try docker-compose in GH

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -14,3 +14,7 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm test
+      - name: Build the docker-compose stack
+        run: docker-compose -f docker-compose.yml up -d
+      - name: Check running containers
+        run: docker ps -a
