--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -19,10 +19,8 @@ jobs:
       - run: npm ci
       - run: npm test
       - name: Build the docker-compose stack
-        run: docker-compose -f docker-compose.yml up -d
+        run: docker-compose -f docker-compose.yml up mysqldb -d
       - name: Check running containers
         run: docker ps -a
-      - name: Check logs
-        run: docker logs app
       - name: Run test suite
-        run: docker exec app npm run test
+        run: npm run test:e2e
