--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -9,7 +9,15 @@ jobs:
     runs-on: ubuntu-latest
     env:
       APP_ENV: test
-      APP_PORT: ${{ secrets.APP_PORT }}
+      APP_PORT: 3000
+      DB_HOST: localhost
+      DB_PORT: 3306
+      DB_NAME: example_db
+      DB_USER: root
+      DB_PASS: example
+      JWT_EXPIRES_IN_SECONDS: 3600
+      JWT_PUBLIC_KEY: ${{ secrets.JWT_PUBLIC_KEY }}
+      JWT_PRIVATE_KEY: ${{ secrets.JWT_PRIVATE_KEY }}
 
     steps:
       - uses: actions/checkout@v2
