:construction: Try docker-compose in GH 5

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -30,10 +30,14 @@ jobs:
         run: docker-compose -f docker-compose.yml up -d mysqldb
       - name: Check running containers
         run: docker ps -a
-      - name: Create public key
-        run: |
-          touch jwtRS256.key.pub
-          echo ${{ secrets.JWT_PUBLIC_KEY }} >> jwtRS256.key.pub
-          cat jwtRS256.key.pub
+      # - name: Create public key
+      #   run: |
+      #     touch jwtRS256.key.pub
+      #     echo ${{ secrets.JWT_PUBLIC_KEY }} >> jwtRS256.key.pub
+      #     cat jwtRS256.key.pub
+      - run: 'echo "$PUBLIC_KEY" > jwtRS256.key.pub'
+        shell: bash
+        env:
+          PUBLIC_KEY: ${{secrets.JWT_PUBLIC_KEY}}
       - name: Run test suite
         run: npm run test:e2e
