--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -17,7 +17,7 @@ jobs:
       DB_PASS: example
       JWT_EXPIRES_IN_SECONDS: 3600
       JWT_PUBLIC_KEY: './jwtRS256.key.pub'
-      JWT_PRIVATE_KEY: ${{ secrets.JWT_PRIVATE_KEY }}
+      JWT_PRIVATE_KEY: './jwtRS256.key'
 
     steps:
       - uses: actions/checkout@v2
@@ -35,9 +35,15 @@ jobs:
       #     touch jwtRS256.key.pub
       #     echo ${{ secrets.JWT_PUBLIC_KEY }} >> jwtRS256.key.pub
       #     cat jwtRS256.key.pub
-      - run: 'echo "$PUBLIC_KEY" > jwtRS256.key.pub'
+      - name: Create JWT Public Key
+        run: 'echo "$PUBLIC_KEY" > jwtRS256.key.pub'
         shell: bash
         env:
           PUBLIC_KEY: ${{secrets.JWT_PUBLIC_KEY}}
+      - name: Create JWT Private Key
+        run: 'echo "$PRIVATE_KEY" > jwtRS256.key'
+        shell: bash
+        env:
+          PRIVATE_KEY: ${{secrets.JWT_PRIVATE_KEY}}
       - name: Run test suite
         run: npm run test:e2e
