:construction: Update var name

--- a/.env.template
+++ b/.env.template
@@ -6,5 +6,5 @@ DB_NAME=
 DB_USER=
 DB_PASS=
 JWT_EXPIRES_IN_SECONDS=3600
-JWT_PUBLIC_KEY=
-JWT_PRIVATE_KEY=
+JWT_PUBLIC_KEY_PATH=
+JWT_PRIVATE_KEY_PATH=
