--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -16,8 +16,8 @@ jobs:
       DB_USER: root
       DB_PASS: example
       JWT_EXPIRES_IN_SECONDS: 3600
-      JWT_PUBLIC_KEY: './jwtRS256.key.pub'
-      JWT_PRIVATE_KEY: './jwtRS256.key'
+      JWT_PUBLIC_KEY_PATH: './jwtRS256.key.pub'
+      JWT_PRIVATE_KEY_PATH: './jwtRS256.key'
 
     steps:
       - uses: actions/checkout@v2
