--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -40,8 +40,5 @@ jobs:
         shell: bash
         env:
           PRIVATE_KEY: ${{secrets.JWT_PRIVATE_KEY}}
-      - name: Sleep for 10 seconds
-        run: sleep 10
-        shell: bash
       - name: Run test suite
-        run: npm run test:e2e
+        run: sleep 5 && npm run test:e2e
