--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -7,6 +7,18 @@ on:
 jobs:
   test_pull_request:
     runs-on: ubuntu-latest
+    env:
+      APP_ENV: test
+      APP_PORT: 3000
+      DB_HOST: localhost
+      DB_PORT: 3306
+      DB_NAME: example_db
+      DB_USER: root
+      DB_PASS: example
+      JWT_EXPIRES_IN_SECONDS: 3600
+      JWT_PUBLIC_KEY_PATH: './jwtRS256.key.pub'
+      JWT_PRIVATE_KEY_PATH: './jwtRS256.key'
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -14,3 +26,19 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm test
+      - name: Build the docker-compose stack
+        run: docker-compose -f docker-compose.yml up -d mysqldb
+      - name: Check running containers
+        run: docker ps -a
+      - name: Create JWT Public Key
+        run: 'echo "$PUBLIC_KEY" > jwtRS256.key.pub'
+        shell: bash
+        env:
+          PUBLIC_KEY: ${{secrets.JWT_PUBLIC_KEY}}
+      - name: Create JWT Private Key
+        run: 'echo "$PRIVATE_KEY" > jwtRS256.key'
+        shell: bash
+        env:
+          PRIVATE_KEY: ${{secrets.JWT_PRIVATE_KEY}}
+      - name: Run test suite
+        run: sleep 5 && npm run test:e2e
