--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -16,8 +16,8 @@ jobs:
       DB_USER: root
       DB_PASS: example
       JWT_EXPIRES_IN_SECONDS: 3600
-      JWT_PUBLIC_KEY_PATH: './jwtRS256.key.pub'
-      JWT_PRIVATE_KEY_PATH: './jwtRS256.key'
+      JWT_PUBLIC_KEY_BASE64: ${{secrets.JWT_PUBLIC_KEY_BASE64}}
+      JWT_PRIVATE_KEY_BASE64: ${{secrets.JWT_PRIVATE_KEY_BASE64}}
 
     steps:
       - uses: actions/checkout@v2
@@ -25,20 +25,11 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
-      - run: npm test
+      - name: Run unit tests
+        run: npm test
       - name: Build the docker-compose stack
         run: docker-compose -f docker-compose.yml up -d mysqldb
       - name: Check running containers
         run: docker ps -a
-      - name: Create JWT Public Key
-        run: 'echo "$PUBLIC_KEY" > jwtRS256.key.pub'
-        shell: bash
-        env:
-          PUBLIC_KEY: ${{secrets.JWT_PUBLIC_KEY}}
-      - name: Create JWT Private Key
-        run: 'echo "$PRIVATE_KEY" > jwtRS256.key'
-        shell: bash
-        env:
-          PRIVATE_KEY: ${{secrets.JWT_PRIVATE_KEY}}
-      - name: Run test suite
+      - name: Run e2e tests
         run: sleep 5 && npm run test:e2e
