--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -1,11 +1,11 @@
-name: Build_Workflow
+name: build
 
 on:
   pull_request:
     branches: [master]
 
 jobs:
-  test_pull_request:
+  build_pull_request:
     runs-on: ubuntu-latest
 
     steps:
