--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "doc:serve": "npx compodoc -p tsconfig.json -w -s -r 8001",
     "doc:generate": "npx compodoc -p tsconfig.json"
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^7.4.2",
@@ -51,6 +56,8 @@
     "uuid": "^8.3.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
     "@compodoc/compodoc": "^1.1.11",
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.1",
@@ -67,6 +74,7 @@
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
+    "husky": "^4.3.0",
     "jest": "^26.4.2",
     "prettier": "^2.0.5",
     "supertest": "^4.0.2",
