feat: add default admin user via CLI

--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,4 @@ JWT_ACCESS_TOKEN_EXP_IN_SEC=3600
 JWT_REFRESH_TOKEN_EXP_IN_SEC=7200
 JWT_PUBLIC_KEY_BASE64=
 JWT_PRIVATE_KEY_BASE64=
+DEFAULT_ADMIN_USER_PASSWORD=
