--- a/.env.template
+++ b/.env.template
@@ -1,12 +1,12 @@
 APP_ENV=development
 APP_PORT=3000
-DB_HOST=localhost
+DB_HOST=0.0.0.0
 DB_PORT=3306
-DB_NAME=example-database
-DB_USER=example-user
-DB_PASS=example-password
+DB_NAME=example_db
+DB_USER=root
+DB_PASS=example
 JWT_ACCESS_TOKEN_EXP_IN_SEC=3600
 JWT_REFRESH_TOKEN_EXP_IN_SEC=7200
 JWT_PUBLIC_KEY_BASE64=
 JWT_PRIVATE_KEY_BASE64=
-DEFAULT_ADMIN_USER_PASSWORD=admin-password
+DEFAULT_ADMIN_USER_PASSWORD=admin-example
