--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=monstar-lab-oss_nestjs-starter-rest-api
 sonar.organization=monstar-lab-oss
+sonar.exclusions=test/*, **/*.spec.ts
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=nestjs-starter-rest-api
