--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "mysql": "^2.18.1",
-    "nestjs-pino": "^1.2.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -62,7 +61,8 @@
     "rxjs": "^6.6.2",
     "swagger-ui-express": "4.1.4",
     "typeorm": "^0.2.25",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
