--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "eslint-plugin-import": "^2.22.0",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
+    "jest-sonar-reporter": "^2.0.0",
     "prettier": "^2.0.5",
     "supertest": "^4.0.2",
     "ts-jest": "^26.2.0",
@@ -94,6 +95,7 @@
     "typescript": "^3.9.7"
   },
   "jest": {
+    "testResultsProcessor": "jest-sonar-reporter",
     "moduleFileExtensions": [
       "js",
       "json",
