--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,8 +6,9 @@ sonar.exclusions=test/**/*, **/*.spec.ts
 #sonar.projectName=nestjs-starter-rest-api
 #sonar.projectVersion=1.0
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
+sonar.sources=src
+sonar.exclusions=**/*.spec.ts
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.testExecutionReportPaths=test-report.xml
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
