feat: logging interceptor test

--- a/package.json
+++ b/package.json
@@ -109,6 +109,9 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
+    "coveragePathIgnorePatterns": [
+      ".module.ts$"
+    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
