--- a/package.json
+++ b/package.json
@@ -32,13 +32,9 @@
     "migration:run": "ts-node node_modules/.bin/typeorm migration:run",
     "migration:revert": "ts-node node_modules/.bin/typeorm migration:revert",
     "doc:serve": "npx compodoc -p tsconfig.json -w -s -r 8001",
-    "doc:generate": "npx compodoc -p tsconfig.json"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
+    "doc:generate": "npx compodoc -p tsconfig.json",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "**/*.ts": [
@@ -47,61 +43,61 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "@nestjs/common": "^7.5.5",
-    "@nestjs/config": "^0.5.0",
-    "@nestjs/core": "^7.5.5",
-    "@nestjs/jwt": "^7.1.0",
-    "@nestjs/passport": "^7.1.0",
-    "@nestjs/platform-express": "^7.4.2",
-    "@nestjs/swagger": "4.5.1",
-    "@nestjs/typeorm": "^7.1.0",
-    "@types/uuid": "^8.3.0",
+    "@nestjs/common": "^8.0.6",
+    "@nestjs/config": "^1.0.1",
+    "@nestjs/core": "^8.0.6",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.0.1",
+    "@nestjs/platform-express": "^8.0.6",
+    "@nestjs/swagger": "^5.0.9",
+    "@nestjs/typeorm": "^8.0.2",
+    "@types/uuid": "^8.3.1",
     "bcrypt": "^5.0.1",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.2",
+    "rxjs": "^7.3.0",
     "swagger-ui-express": "4.1.6",
     "typeorm": "^0.2.37",
-    "uuid": "^8.3.0",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "^9.1.2",
+    "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
-    "@compodoc/compodoc": "^1.1.11",
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.1",
-    "@nestjs/testing": "^7.4.2",
+    "@compodoc/compodoc": "^1.1.14",
+    "@nestjs/cli": "^8.1.1",
+    "@nestjs/schematics": "^8.0.3",
+    "@nestjs/testing": "^8.0.6",
     "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.7",
-    "@types/jest": "^25.2.3",
-    "@types/node": "^14.6.0",
-    "@types/passport-jwt": "^3.0.3",
-    "@types/passport-local": "^1.0.33",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
-    "eslint": "^7.7.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.10",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "husky": "^4.3.0",
-    "jest": "^26.4.2",
+    "husky": "^7.0.0",
+    "jest": "^27.1.0",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
-    "supertest": "^4.0.2",
-    "ts-jest": "^26.5.6",
-    "ts-loader": "^7.0.5",
-    "ts-node": "^8.10.2",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.9.7"
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5",
+    "ts-loader": "^9.2.5",
+    "ts-node": "^10.2.1",
+    "tsconfig-paths": "^3.11.0",
+    "typescript": "^4.4.2"
   },
   "jest": {
     "testResultsProcessor": "jest-sonar-reporter",
