build: mysql platform for m1

--- a/.env.template
+++ b/.env.template
@@ -10,3 +10,4 @@ JWT_REFRESH_TOKEN_EXP_IN_SEC=7200
 JWT_PUBLIC_KEY_BASE64=
 JWT_PRIVATE_KEY_BASE64=
 DEFAULT_ADMIN_USER_PASSWORD=admin-example
+MYSQL_PLATFORM=
