chore: replace mysql with postgres

--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -11,7 +11,7 @@ jobs:
       APP_ENV: test
       APP_PORT: 3000
       DB_HOST: localhost
-      DB_PORT: 3306
+      DB_PORT: 5432
       DB_NAME: example_db
       DB_USER: root
       DB_PASS: example
@@ -30,7 +30,7 @@ jobs:
       - name: Run unit tests
         run: npm test
       - name: Build the docker-compose stack
-        run: docker-compose -f docker-compose.yml up -d mysqldb
+        run: docker-compose -f docker-compose.yml up -d pgsqldb
       - name: Check running containers
         run: docker ps -a
       - name: Run e2e tests
