fix: ormconfig to datasource and fix path on package.json

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json --runInBand",
-    "typeorm": "typeorm-ts-node-commonjs -d ./src/shared/configs/typeorm.config.ts",
+    "typeorm": "typeorm-ts-node-commonjs -d ./ormconfig.ts",
     "migration:generate": "npm run typeorm migration:generate",
     "migration:show": "npm run typeorm migration:show",
     "migration:run": "npm run typeorm migration:run",
