--- a/package.json
+++ b/package.json
@@ -29,11 +29,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json --runInBand",
     "typeorm": "typeorm-ts-node-commonjs -d ./ormconfig.ts",
-    "migration:generate": "npm run typeorm migration:generate",
-    "migration:show": "npm run typeorm migration:show",
-    "migration:run": "npm run typeorm migration:run",
-    "migration:revert": "npm run typeorm migration:revert",
-    "migration:create": "typeorm-ts-node-commonjs migration:create",
+    "migration:generate": "ts-node node_modules/.bin/typeorm migration:generate -d ormconfig.ts migrations/$npm_config_name",
+    "migration:run": "ts-node node_modules/.bin/typeorm migration:run -d ormconfig.ts",
+    "migration:revert": "ts-node node_modules/.bin/typeorm migration:revert -d ormconfig.ts",
     "doc:serve": "npx compodoc -p tsconfig.json -w -s -r 8001",
     "doc:generate": "npx compodoc -p tsconfig.json",
     "prepare": "husky install",
@@ -46,62 +44,63 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "@nestjs/common": "^9.0.8",
+    "@nestjs/common": "^9.1.1",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.8",
+    "@nestjs/core": "^9.1.1",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.8",
-    "@nestjs/swagger": "^6.0.5",
-    "@nestjs/typeorm": "^9.0.0",
+    "@nestjs/platform-express": "^9.1.1",
+    "@nestjs/swagger": "^6.1.2",
+    "@nestjs/typeorm": "^9.0.1",
     "@types/uuid": "^8.3.4",
     "bcrypt": "^5.0.1",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
-    "passport": "^0.4.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "dotenv": "^16.0.2",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.7.3",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
     "swagger-ui-express": "4.5.0",
-    "typeorm": "^0.3.7",
-    "uuid": "^8.3.2",
-    "winston": "^3.8.1"
+    "typeorm": "^0.3.10",
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@compodoc/compodoc": "^1.1.19",
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.1",
-    "@nestjs/testing": "^9.0.8",
+    "@nestjs/cli": "^9.1.3",
+    "@nestjs/schematics": "^9.0.3",
+    "@nestjs/testing": "^9.1.1",
     "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.6",
-    "@types/node": "^18.6.4",
+    "@types/express": "^4.17.14",
+    "@types/jest": "^29.0.3",
+    "@types/node": "^18.7.18",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/pg": "^8.6.5",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.30.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "eslint": "^8.23.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "husky": "^8.0.1",
-    "jest": "^28.1.3",
+    "jest": "^29.0.3",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "supertest": "^6.2.4",
-    "ts-jest": "^28.0.7",
-    "ts-loader": "^9.3.1",
+    "ts-jest": "^29.0.1",
+    "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.4"
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "^4.8.3"
   },
   "jest": {
     "testResultsProcessor": "jest-sonar-reporter",
