--- a/package.json
+++ b/package.json
@@ -43,64 +43,64 @@
     ]
   },
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
-    "@nestjs/common": "^10.1.3",
-    "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.1.3",
-    "@nestjs/jwt": "^10.1.0",
-    "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^10.1.3",
-    "@nestjs/swagger": "^7.1.8",
+    "@nestjs/common": "^10.2.5",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.2.5",
+    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/passport": "^10.0.2",
+    "@nestjs/platform-express": "^10.2.5",
+    "@nestjs/swagger": "^7.1.11",
     "@nestjs/typeorm": "^10.0.0",
-    "@types/uuid": "^8.3.4",
-    "bcrypt": "^5.0.1",
+    "@types/uuid": "^9.0.4",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "dotenv": "^16.0.2",
+    "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
+    "joi": "^17.10.1",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.8.0",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.5.6",
-    "swagger-ui-express": "4.5.0",
-    "typeorm": "^0.3.10",
-    "uuid": "^9.0.0",
-    "winston": "^3.8.2"
+    "rimraf": "^5.0.1",
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "5.0.0",
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@compodoc/compodoc": "^1.1.19",
-    "@nestjs/cli": "^10.1.11",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@compodoc/compodoc": "^1.1.21",
+    "@nestjs/cli": "^10.1.17",
     "@nestjs/schematics": "^10.0.2",
-    "@nestjs/testing": "^10.1.3",
+    "@nestjs/testing": "^10.2.5",
     "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.14",
-    "@types/jest": "^29.0.3",
-    "@types/node": "^18.7.18",
-    "@types/passport-jwt": "^3.0.6",
-    "@types/passport-local": "^1.0.34",
-    "@types/pg": "^8.6.5",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.4",
+    "@types/node": "^20.6.0",
+    "@types/passport-jwt": "^3.0.9",
+    "@types/passport-local": "^1.0.35",
+    "@types/pg": "^8.10.2",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
-    "eslint": "^8.23.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "husky": "^8.0.1",
-    "jest": "^29.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "jest-sonar-reporter": "^2.0.0",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "supertest": "^6.2.4",
-    "ts-jest": "^29.0.1",
-    "ts-loader": "^9.4.1",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.0.3",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.8.3"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.2.2"
   },
   "jest": {
     "testResultsProcessor": "jest-sonar-reporter",
