feat: add devcontainer configuration

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,5 +1,8 @@
-# Basic dependabot.yml file with
-# minimum configuration for two package managers
+# To get started with Dependabot version updates, you'll need to specify which
+# package ecosystems to update and where the package manifests are located.
+# Please see the documentation for more information:
+# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
+# https://containers.dev/guide/dependabot
 
 version: 2
 updates:
@@ -9,12 +12,18 @@ updates:
     directory: '/'
     # Check the npm registry for updates every day (weekdays)
     schedule:
-      interval: 'daily'
+      interval: 'weekly'
 
   # Enable version updates for Docker
   - package-ecosystem: 'docker'
     # Look for a `Dockerfile` in the `root` directory
     directory: '/'
     # Check for updates once a week
+    schedule:
+      interval: 'weekly'
+
+  # Enable version updates for devcontainers
+  - package-ecosystem: 'devcontainers'
+    directory: '/'
     schedule:
       interval: 'weekly'
