build: update gh actions

--- a/.github/workflows/sonarqube-workflow.yml
+++ b/.github/workflows/sonarqube-workflow.yml
@@ -1,10 +1,13 @@
 name: SonarCloud build
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    types: [opened, synchronize, reopened]
+
+# Uncomment once you set up Sonarqube
+# on:
+#   push:
+#     branches:
+#       - master
+#   pull_request:
+#     types: [opened, synchronize, reopened]
+
 jobs:
   sonarcloud:
     name: SonarCloud
@@ -15,7 +18,14 @@ jobs:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 20.14.0
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
       - run: npm ci
       - name: Run test cov
         run: npm run test:cov
