--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -1,18 +1,28 @@
 name: build
 
 on:
+  push:
+    branches:
+      - master
   pull_request:
-    branches: [master]
+    types: [opened, synchronize, reopened]
 
 jobs:
-  build_pull_request:
+  run_build:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 20.14.0
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
       - run: npm ci
       - name: Run build step
         run: npm run build
