--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -1,8 +1,11 @@
 name: tests
 
 on:
+  push:
+    branches:
+      - master
   pull_request:
-    branches: [master]
+    types: [opened, synchronize, reopened]
 
 jobs:
   test_pull_request:
@@ -25,7 +28,14 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 20.14.0
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
       - run: npm ci
       - name: Run unit tests
         run: npm test
