--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,14 +25,15 @@
         "mike-co.import-sorter",
         "waderyan.gitblame",
         "ms-vscode.vscode-typescript-tslint-plugin",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
+        "firsttris.vscode-jest-runner"
       ]
     }
   },
   "mounts": [
     "source=${localWorkspaceFolder},target=/usr/src/app,type=bind",
     "source=node_modules,target=/usr/src/app/node_modules,type=volume"
-  ],
+  ]
   // Features to add to the dev container. More info: https://containers.dev/features.
   // "features": {},
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
