chore: update all dependencies

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,7 @@
 APP_ENV=development
 APP_PORT=3000
-DB_HOST=0.0.0.0
+TEST_DB_HOST=pgsqldb
+DB_HOST=pgsqldb
 DB_PORT=5432
 DB_NAME=example_db
 DB_USER=root
