--- a/.github/workflows/sonarqube-workflow.yml
+++ b/.github/workflows/sonarqube-workflow.yml
@@ -7,6 +7,8 @@ name: SonarCloud build
 #       - master
 #   pull_request:
 #     types: [opened, synchronize, reopened]
+on:
+  workflow_dispatch:
 
 jobs:
   sonarcloud:
